force-app/main/default/objects/Staging_Govspend_Contact__c/Staging_Govspend_Contact__c.object-meta.xml
<CustomObject>
    <label>Staging Govspend Contact</label>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>Staging Govspend Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Govspend Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>