force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <label>Account Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>