force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <label>Account City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>