force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Count__c</fullName>
    <label>Account Contact Count</label>
    <length>200</length>
    <type>Text</type>
</CustomField>