force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_County__c.field-meta.xml
<CustomField>
    <fullName>Account_County__c</fullName>
    <label>Account County</label>
    <length>200</length>
    <type>Text</type>
</CustomField>