force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Account_Fiscal_Year__c</fullName>
    <label>Account Fiscal Year</label>
    <length>200</length>
    <type>Text</type>
</CustomField>