force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <label>Account State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>