force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_State_Code__c</fullName>
    <label>Account State Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>