force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Account_Website__c</fullName>
    <label>Account Website</label>
    <length>200</length>
    <type>Text</type>
</CustomField>