force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Account_Zip__c.field-meta.xml
<CustomField>
    <fullName>Account_Zip__c</fullName>
    <label>Account Zip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>