force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>