force-app/main/default/objects/Staging_Govspend_Contact__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>