force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert Lead</fullName>
            </value>
            <value>
                <fullName>Update Lead</fullName>
            </value>
            <value>
                <fullName>Update Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>