force-app/main/default/objects/Staging_Govspend_Contact__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>OrgId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>