force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <length>200</length>
    <type>Text</type>
</CustomField>