force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Staging_Govspend_Contact_Header__c.field-meta.xml
<CustomField>
    <fullName>Staging_Govspend_Contact_Header__c</fullName>
    <label>Staging Govspend Contact Header</label>
    <referenceTo>Staging_Govspend_Contact_Header__c</referenceTo>
    <relationshipLabel>Staging Govspend Contacts</relationshipLabel>
    <relationshipName>Staging_Govspend_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>