force-app/main/default/objects/Staging_Govspend_Contact__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>StateCode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>