force-app/main/default/objects/Staging_Govspend_Contact__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success?</label>
    <type>Checkbox</type>
</CustomField>